--- a/src/main/resources/view/BodyTableView.fxml
+++ b/src/main/resources/view/BodyTableView.fxml
@@ -2,8 +2,4 @@
 
 <?import javafx.scene.control.TableView?>
 
-<TableView fx:id="bodyTableView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" tableMenuButtonVisible="true" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <columnResizePolicy>
-      <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-   </columnResizePolicy>
-</TableView>
+<TableView fx:id="bodyTableView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" />
