--- a/src/main/resources/view/FinancialTrackerWindow.fxml
+++ b/src/main/resources/view/FinancialTrackerWindow.fxml
@@ -32,7 +32,7 @@
         </padding>
     </StackPane>
 
-       <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+    <StackPane fx:id="commandBoxPlaceholder" alignment="CENTER_RIGHT" styleClass="pane-with-border" VBox.vgrow="NEVER">
         <padding>
             <Insets bottom="5" left="10" right="10" top="5" />
         </padding>
