--- a/src/main/resources/view/ResultDisplay.fxml
+++ b/src/main/resources/view/ResultDisplay.fxml
@@ -2,7 +2,11 @@
 
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.StackPane?>
-<StackPane styleClass="pane-with-border" xmlns="http://javafx.com/javafx/8"
-           xmlns:fx="http://javafx.com/fxml/1">
-    <TextArea fx:id="resultDisplay" editable="false" styleClass="result-display"/>
-</StackPane>
+<?import javafx.scene.layout.VBox?>
+
+<VBox fx:id="resultHolder" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <TextArea fx:id="resultDisplay" editable="false" styleClass="result-display" wrapText="true" VBox.vgrow="ALWAYS" />
+      <StackPane fx:id="resultView" styleClass="pane-with-border" VBox.vgrow="ALWAYS" />
+   </children>
+</VBox>
