Added settings to storage

--- a/src/main/resources/view/TwoSplitColumnLayout.fxml
+++ b/src/main/resources/view/TwoSplitColumnLayout.fxml
@@ -3,8 +3,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.StackPane?>
 
-
-<SplitPane dividerPositions="0.5" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane fx:id="splitPane" dividerPositions="0.5" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <items>
       <StackPane fx:id="leftPane" />
       <StackPane fx:id="rightPane" />
