--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -1,5 +1,9 @@
+.root {
+    -fx-background-color: #192039;
+}
+
 .background {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: #192039;
     background-color: #383838; /* Used in the default.html file */
 }
 
@@ -44,32 +48,34 @@
 }
 
 .table-view {
-    -fx-base: #1d1d1d;
-    -fx-control-inner-background: #1d1d1d;
-    -fx-background-color: #1d1d1d;
+    -fx-base: #161d33;
+    -fx-control-inner-background: #161d33;
+    -fx-background-color: #161d33;
     -fx-table-cell-border-color: transparent;
     -fx-table-header-border-color: transparent;
     -fx-padding: 5;
+    -fx-border-width: 10;
+    -fx-background-insets: 10 10 10 10;
 }
 
 .table-view .scroll-bar {
-    -fx-background-color: #1d1d1d;
+    -fx-background-color: #161d33;
 }
 
 .table-view .column-header, .table-view .filler {
     -fx-size: 16;
     -fx-border-width: 0 0 0 0;
-    -fx-background-color: #1d1d1d;
+    -fx-background-color: #161d33;
     -fx-border-insets: 0 0 0 0;
 }
 
 .table-view .column-header .label {
-    -fx-font-size: 12pt;
-    -fx-font-family: "Segoe UI Light";
+    -fx-font-size: 10pt;
+    -fx-font-family: "Palatino Linotype";
     -fx-text-fill: white;
     -fx-alignment: center-left;
     -fx-opacity: 1;
-    -fx-background-color: #1d1d1d;
+    -fx-background-color: #161d33;
 }
 
 .table-view:focused .table-row-cell:filled:focused:selected {
@@ -77,20 +83,20 @@
 }
 
 .split-pane:horizontal .split-pane-divider {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: #161d33;
     -fx-border-color: transparent transparent transparent #4d4d4d;
 }
 
 .split-pane {
     -fx-border-radius: 1;
     -fx-border-width: 1;
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: #161d33;
 }
 
 .list-view {
     -fx-background-insets: 0;
     -fx-padding: 0;
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: #161d33;
 }
 
 .list-cell {
@@ -133,17 +139,17 @@
 }
 
 .stack-pane {
-     -fx-background-color: derive(#1d1d1d, 20%);
+     -fx-background-color: #161d33;
 }
 
 .pane-with-border {
-     -fx-background-color: derive(#1d1d1d, 20%);
-     -fx-border-color: derive(#1d1d1d, 10%);
+     -fx-background-color: #161d33;
+     -fx-border-color: #192039;
      -fx-border-top-width: 1px;
 }
 
 .status-bar {
-    -fx-background-color: derive(#1d1d1d, 30%);
+    -fx-background-color: #192039;
 }
 
 .result-display {
@@ -165,8 +171,8 @@
 }
 
 .status-bar-with-border {
-    -fx-background-color: derive(#1d1d1d, 30%);
-    -fx-border-color: derive(#1d1d1d, 25%);
+    -fx-background-color: #192039;
+    -fx-border-color: #192039;
     -fx-border-width: 1px;
 }
 
@@ -175,17 +181,17 @@
 }
 
 .grid-pane {
-    -fx-background-color: derive(#1d1d1d, 30%);
-    -fx-border-color: derive(#1d1d1d, 30%);
+    -fx-background-color: #192039;
+    -fx-border-color: #192039;
     -fx-border-width: 1px;
 }
 
 .grid-pane .stack-pane {
-    -fx-background-color: derive(#1d1d1d, 30%);
+    -fx-background-color: #192039;
 }
 
 .context-menu {
-    -fx-background-color: derive(#1d1d1d, 50%);
+    -fx-background-color: #192039;
 }
 
 .context-menu .label {
@@ -193,7 +199,7 @@
 }
 
 .menu-bar {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: #161d33;
 }
 
 .menu-bar .label {
@@ -217,7 +223,7 @@
     -fx-border-color: #e2e2e2;
     -fx-border-width: 2;
     -fx-background-radius: 0;
-    -fx-background-color: #1d1d1d;
+    -fx-background-color: #192039;
     -fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
     -fx-font-size: 11pt;
     -fx-text-fill: #d8d8d8;
@@ -230,7 +236,7 @@
 
 .button:pressed, .button:default:hover:pressed {
   -fx-background-color: white;
-  -fx-text-fill: #1d1d1d;
+  -fx-text-fill: #192039;
 }
 
 .button:focused {
@@ -243,7 +249,7 @@
 
 .button:disabled, .button:default:disabled {
     -fx-opacity: 0.4;
-    -fx-background-color: #1d1d1d;
+    -fx-background-color: #192039;
     -fx-text-fill: white;
 }
 
@@ -257,11 +263,11 @@
 }
 
 .dialog-pane {
-    -fx-background-color: #1d1d1d;
+    -fx-background-color: #192039;
 }
 
 .dialog-pane > *.button-bar > *.container {
-    -fx-background-color: #1d1d1d;
+    -fx-background-color: #192039;
 }
 
 .dialog-pane > *.label.content {
@@ -271,7 +277,7 @@
 }
 
 .dialog-pane:header *.header-panel {
-    -fx-background-color: derive(#1d1d1d, 25%);
+    -fx-background-color: derive(#192039, 25%);
 }
 
 .dialog-pane:header *.header-panel *.label {
@@ -282,11 +288,11 @@
 }
 
 .scroll-bar {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: #192039;
 }
 
 .scroll-bar .thumb {
-    -fx-background-color: derive(#1d1d1d, 50%);
+    -fx-background-color: #192039;
     -fx-background-insets: 3;
 }
 
@@ -308,7 +314,7 @@
 }
 
 #cardPane {
-    -fx-background-color: transparent;
+    -fx-background-color: #161d33;
     -fx-border-width: 0;
 }
 
