--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -17,7 +17,7 @@
     <Image url="@/images/address_book_32.png" />
   </icons>
   <scene>
-    <Scene>
+    <Scene fill="#161d33">
       <stylesheets>
         <URL value="@DarkTheme.css" />
         <URL value="@Extensions.css" />
@@ -54,17 +54,26 @@
               </VBox>
                   <VBox minWidth="1000.0" prefHeight="450.0" prefWidth="1000.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <StackPane fx:id="bodyMasterListPlaceholder" maxHeight="350.0" prefHeight="350.0" styleClass="pane-with-border">
+                        <StackPane fx:id="bodyMasterListPlaceholder" maxHeight="330.0" prefHeight="330.0" styleClass="pane-with-border">
                            <padding>
-                              <Insets bottom="5" left="10" right="10" top="5" />
+                              <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                            </padding>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
                         </StackPane>
-                      <StackPane fx:id="lineChartPanelPlaceholder" maxHeight="150.0" styleClass="pane-with-border">
+                      <StackPane fx:id="lineChartPanelPlaceholder" maxHeight="100.0" prefHeight="100.0" styleClass="pane-with-border">
                           <padding>
-                              <Insets bottom="5" left="10" right="10" top="5" />
+                              <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                           </padding>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
                       </StackPane>
                      </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
                   </VBox>
                </children>
             </HBox>
