--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -30,7 +30,7 @@
                 <children>
                     <AnchorPane styleClass="pane-with-border" stylesheets="@DarkTheme.css" HBox.hgrow="NEVER">
                         <children>
-                            <Button layoutX="2.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="78.0" prefWidth="78.0" styleClass="menu-button" stylesheets="@DarkTheme.css">
+                            <Button layoutX="2.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="50.0" prefWidth="50.0" styleClass="menu-button" stylesheets="@DarkTheme.css">
                                 <graphic>
                                     <ImageView fitHeight="30.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                                         <image>
@@ -38,11 +38,11 @@
                                         </image>
                                     </ImageView>
                                 </graphic>
-                                <padding>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                </padding>
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding>
                             </Button>
-                            <Button layoutX="2.0" layoutY="87.0" mnemonicParsing="false" onAction="#handleExit" prefHeight="78.0" prefWidth="78.0" styleClass="menu-button" stylesheets="@DarkTheme.css">
+                            <Button layoutX="2.0" layoutY="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#handleExit" prefHeight="50.0" prefWidth="50.0" styleClass="menu-button" stylesheets="@DarkTheme.css">
                                 <graphic>
                                     <ImageView fitHeight="30.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                                         <image>
@@ -50,13 +50,13 @@
                                         </image>
                                     </ImageView>
                                 </graphic>
-                                <padding>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                </padding>
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding>
                             </Button>
                         </children>
                     </AnchorPane>
-                    <VBox prefWidth="1830.0">
+                    <VBox maxWidth="1.7976931348623157E308" prefWidth="1830.0" HBox.hgrow="ALWAYS">
                         <children>
                             <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
                                 <padding>
