--- a/src/main/resources/view/itinerary/events/EventsPage.fxml
+++ b/src/main/resources/view/itinerary/events/EventsPage.fxml
@@ -5,8 +5,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -68,21 +66,15 @@
               </columnConstraints>
               <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label fx:id="nameLabel" alignment="CENTER" layoutX="10.0" layoutY="77.0" style="-fx-text-fill: #FFFFFF;" text="\$Name" textAlignment="CENTER" textFill="WHITE" />
-                  <Label fx:id="inventoryLabel" alignment="CENTER" style="-fx-text-fill: #FFFFFF;" text="\$Inventory" textFill="WHITE" GridPane.rowIndex="2" />
-                  <Label fx:id="totalBudgetLabel" style="-fx-text-fill: #FFFFFF;" text="\$TotalBudget" textFill="WHITE" GridPane.rowIndex="3" />
-                  <Label fx:id="bookingLabel" style="-fx-text-fill: #FFFFFF;" text="\$Booking" textFill="WHITE" GridPane.rowIndex="4" />
-                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
-                     <image>
-                        <Image url="@../../../../../../build/resources/main/images/dummytrip.jpeg" />
-                     </image>
-                  </ImageView>
+                  <Label fx:id="nameLabel" alignment="CENTER" layoutX="10.0" layoutY="77.0" style="-fx-text-fill: #FFFFFF;" textAlignment="CENTER" textFill="WHITE" />
+                  <Label fx:id="inventoryLabel" alignment="CENTER" style="-fx-text-fill: #FFFFFF;" text="\$Inventory" textFill="WHITE" GridPane.rowIndex="1" />
+                  <Label fx:id="totalBudgetLabel" style="-fx-text-fill: #FFFFFF;" textFill="WHITE" GridPane.rowIndex="2" />
+                  <Label fx:id="bookingLabel" style="-fx-text-fill: #FFFFFF;" text="\$Booking" textFill="WHITE" GridPane.rowIndex="3" />
                </children>
             </GridPane>
              <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hvalue="1.0" prefHeight="557.0" prefWidth="400.0" vvalue="1.0" AnchorPane.bottomAnchor="41.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0">
