--- a/src/main/resources/view/trips/TripsPage.fxml
+++ b/src/main/resources/view/trips/TripsPage.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane style="-fx-background-color: #F2DFD7;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-            <VBox style="-fx-background-color: #F2DFD7;" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #F2DFD7;" VBox.vgrow="ALWAYS">
-                     <content>
-                        <GridPane fx:id="tripGridPane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" style="-fx-background-color: #F2DFD7;">
+            <ScrollPane fitToHeight="true" fitToWidth="true" minHeight="-Infinity" minWidth="-Infinity" prefViewportHeight="300.0" prefViewportWidth="400.0" style="-fx-background-color: #F2DFD7;" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
+               <content>
+         <VBox>
+            <children>
+                        <GridPane fx:id="tripGridPane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" style="-fx-background-color: #F2DFD7;" vgap="10.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="210.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="210" />
@@ -28,10 +28,10 @@
                             <RowConstraints vgrow="SOMETIMES" />
                           </rowConstraints>
                         </GridPane>
-                     </content>
-                  </ScrollPane>
-               </children>
-            </VBox>
+            </children>
+         </VBox>
+               </content>
+            </ScrollPane>
             <GridPane style="-fx-background-color: #50514F;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
