--- a/src/main/resources/view/expenses/ExpensesPage.fxml
+++ b/src/main/resources/view/expenses/ExpensesPage.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -75,10 +76,16 @@
                   <Label fx:id="totalExpenditureLabel" text="\$TotalExpenditure" GridPane.rowIndex="2" />
                   <Label fx:id="budgetLeftLabel" text="\$BudgetLeft" GridPane.rowIndex="3" />
                </children>
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
             </GridPane>
              <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hvalue="1.0" prefHeight="557.0" prefWidth="400.0" vvalue="1.0" AnchorPane.bottomAnchor="41.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0">
                  <content>
-                     <VBox fx:id="expenditureCardContainer" minWidth="400.0" prefWidth="400.0" style="-fx-border-color: black;" />
+                  <Accordion fx:id="dailyExpendituresPanelContainer" minWidth="400.0" prefWidth="400.0" style="-fx-border-color-fx-border-color: black;" />
                  </content>
              </ScrollPane>
          </children>
