--- a/src/main/resources/view/MemberList.fxml
+++ b/src/main/resources/view/MemberList.fxml
@@ -12,7 +12,7 @@
       xmlns:fx="http://javafx.com/fxml"
       prefHeight="300.0">
     <ScrollPane fx:id="listHeaderContainer" prefWidth="600" vbarPolicy="NEVER" hbarPolicy="NEVER">
-        <GridPane fx:id="listHeaders" prefWidth="600" prefHeight="50">
+        <GridPane id="listHeaders" fx:id="listHeaders" prefWidth="600" prefHeight="50">
             <columnConstraints>
                 <ColumnConstraints percentWidth="25" />
                 <ColumnConstraints percentWidth="35" />
