Update UI to reflect all attributes

--- a/src/main/resources/view/finance/FinanceWindow.fxml
+++ b/src/main/resources/view/finance/FinanceWindow.fxml
@@ -20,6 +20,7 @@
       <stylesheets>
         <URL value="@../DarkTheme.css" />
         <URL value="@../Extensions.css" />
+        <URL value="@../finance/Finance.css" />
       </stylesheets>
 
       <VBox>
