--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -13,14 +13,14 @@
 
 <?import javafx.scene.control.TabPane?>
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-         title="Seller Manager Lite" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
+         title="Seller Manager Lite" minWidth="650" minHeight="800" onCloseRequest="#handleExit">
   <icons>
     <Image url="@/images/address_book_32.png" />
   </icons>
   <scene>
     <Scene>
       <stylesheets>
-        <URL value="@DarkTheme.css" />
+        <URL value="@SMLTheme.css" />
         <URL value="@Extensions.css" />
       </stylesheets>
 
@@ -41,7 +41,7 @@
         </StackPane>
 
         <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
-                   minHeight="100" prefHeight="100" maxHeight="100">
+                   minHeight="150" prefHeight="150" maxHeight="150">
           <padding>
             <Insets top="10" right="20" bottom="0" left="20" />
           </padding>
