--- a/src/main/resources/view/SlideshowWindow.fxml
+++ b/src/main/resources/view/SlideshowWindow.fxml
@@ -5,17 +5,18 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.stage.Stage?>
 
-<fx:root resizable="false" title="Help" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root resizable="false" title="Slideshow" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <icons>
     <Image url="@/images/help_icon.png" />
   </icons>
   <scene>
     <Scene>
-         <VBox prefHeight="176.0" prefWidth="254.0">
+         <VBox alignment="TOP_CENTER" prefHeight="176.0" prefWidth="254.0">
             <children>
                <HBox alignment="CENTER_RIGHT">
                   <children>
@@ -26,26 +27,19 @@
                      </Label>
                   </children>
                </HBox>
-               <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0">
-                  <children>
-                     <Label fx:id="questionLabel" text="Question">
-                        <VBox.margin>
-                           <Insets bottom="30.0" top="30.0" />
-                        </VBox.margin>
-                        <font>
-                           <Font name="System Bold" size="24.0" />
-                        </font>
-                     </Label>
-                     <Label fx:id="answerLabel" text="Answer" textFill="#07a431">
-                        <VBox.margin>
-                           <Insets />
-                        </VBox.margin>
-                        <font>
-                           <Font size="22.0" />
-                        </font>
-                     </Label>
-                  </children>
-               </VBox>
+               <Label fx:id="questionNoLabel" text="Question" textAlignment="CENTER">
+                  <font>
+                     <Font size="32.0" />
+                  </font>
+                  <VBox.margin>
+                     <Insets top="15.0" />
+                  </VBox.margin>
+               </Label>
+               <Pane fx:id="questionPane" prefHeight="200.0" prefWidth="200.0">
+                  <VBox.margin>
+                     <Insets top="30.0" />
+                  </VBox.margin>
+               </Pane>
             </children>
             <opaqueInsets>
                <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
